@@ -1,3 +1,5 @@
+* Ensure getAttribute() returns an empty string for null/undefined attributes. [jddalton]
+
 * Only fix Safari bug with `:selected` when the context is from an html document. [jddalton]
 
 * Fix regression by ensuring `ID optimization RTL` in select_regular() passes the context to match(). [jddalton]
